# TBANK

./: .gitignore  CMakeLists.txt  README.md
include/: Bank.hpp  Client.hpp  Deinitializer.hpp  Initializer.hpp  Server.hpp
src/: Bank.cpp  Client.cpp  Deinitializer.cpp  Initializer.cpp  Server.cpp  main.cpp
tests/: test_bank.cpp
tests/integration/: shared_expected.txt  shared_mode.sh  shared_out.txt  socket_expected.txt  socket_mode.sh
